2021. 4. 2. Modified zRGBFPrint and zHSVFPrint. [zeo_color]
2021. 3.31. Reflect modification of ZEDA and abolished *RegZTK. [zeo_optic, zeo_texture, zeo_ph, zeo_nurbs, zeo_mshape*, zeo_map, zeo_map_terra, zeo_mapnet]
2021. 3.31. Modified makefile to separately make and install library and applications. [makefile]
2021. 2.23. Reimplemented zXform3D, zXform3DInv, zFrame3DInv, zFrame3DCascade and zFrame3DXform. [zeo_frame]
2021. 2.23. Added _zXform3D, _zXform3DInv, _zFrame3DInv, _zFrame3DCascade and _zFrame3DXform as macro. [zeo_frame]
2021. 2.21. Added transformation function in zeo_phconv. [app]
2021. 2.20. Added zeo_stl2ztk. [app]
2021. 2.20. Added zSTLIsBin and reimplemented zPH3DFReadSTL. [zeo_ph_stl]
2021. 2.20. Abolished check of normal vector in _zSTLFacetListReg. [zeo_ph_stl]
2021. 2.20. Abolished ZEO_WARN_STL_WRONGNORMAL. [zeo_errmsg]
2020. 7. 2. Added zGJKPoint. [zeo_col_gjk]
2020. 6.20. Added id_bump member in zTexture in order to handle multiple bump maps. [zeo_texture]
2020. 6.18. Modified zTextureFromZTK to read a bump map. [zeo_texture]
2020. 6.18. Added __z_texture_bump_read_file, zTextureSetBumpReadFunc, zTextureBumpReadFuncIsAssigned and zTextureBumpReadFile. [zeo_texture]
2020. 6.18. Added zTextureBumpAlloc. [zeo_texture, zeo_errmsg]
2020. 6.17. Added _zTextureTypeFromZTK and _zTextureTypeFPrintZTK. [zeo_texture]
2020. 6.17. Added type member in zTexture to define bump mapping. [zeo_texture]
2020. 6.17. Added zVec3DAAError. [zeo_vec3d]
2020. 5.15. Modified _zTextureFileFromZTK. [zeo_texture]
2020. 5.15. Added zTextureReadFuncIsAssigned. [zeo_texture]
2020. 5.15. Debugged zTextureInit. [zeo_texture]
2020. 5.15. Implemented ZTK processors for zTexture. [zeo_texture, zeo_shape, zeo_mshape]
2020. 5.15. Defined zTextureArray and added an array of textures in zMShape3D. [zeo_texture, zeo_mshape]
2020. 5.15. Added texture member in zShape3D. [zeo_shape]