@@ -1,5 +1,5 @@
 PREFIX=$(HOME)/usr
 PROJNAME=zeo
-VERSION=1.6.1
+VERSION=1.6.2
 
 DEPENDENCY="zeda=1.4.0;zm=1.2.19"
