@@ -18,13 +18,11 @@ esr: 1
 name : cone
 type : cone
 optic: magenta
-bb: OBB
 center: ( -0.2, 0.2,-0.2 )
 vert: ( -0.2, 0.0, 0.1 )
 radius: 0.08
 
 [shape]
 name : cone2
-optic: cyan
-bb: OBB
+optic: cyan % this will be ignored.
 mirror: cone y
