@@ -10,6 +10,5 @@ esr: 1
 name : sphere
 type : sphere
 optic: yellow
-bb: OBB
 center: ( -0.2, -0.1, 0.0 )
 radius: 0.1
